--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+		<meta name="description" content="Academia De Peluqueria y Barberia, Profesores" />
+		<meta
+			name="keywords"
+			content="Andre calderon, profesores, sinergia, academia, capacitación"
+		/>
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="stylesheet" href="/assets/css/bootstrap.css" />
 		<link
@@ -13,7 +17,11 @@
 			integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
 			crossorigin="anonymous"
 		/>
-		<title>Sinergia Academia</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
+		<title>Nosotros - Sinergia Academia</title>
 	</head>
 
 	<body>
@@ -46,21 +54,27 @@
 			<div class="nosotros__banner"></div>
 		</section>
 
-		<section>
+		<section class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12">
-					<div class="container-fluid cursos__container justify-content-center">
+					<div
+						class="
+							container-fluid
+							cursos__container
+							justify-content-center
+							animate__animated animate__fadeInUp
+						"
+					>
 						<div class="cursos__font">
 							<h1 class="cursos__font--title py-5">Sinergia</h1>
 							<p class="cursos__font--parrafo p-4">
-								Nuestro programa de Educación de la Academia Sinergia, dirigido por
-								Andrea Calderon, permite a los aprendices y al personal menos
-								experimentado aprender las habilidades del oficio, mientras
-								adquieren experiencia práctica de primera mano. Los cursos brindan
-								una base completa sobre la cual crecer, desarrollar o incluso
-								actualizar su conjunto de habilidades. Eche un vistazo a nuestros
-								amplios programas de educación a continuación y no dude en ponerse
-								en contacto para discutir cualquiera de los cursos con más detalle.
+								Nuestro equipo de Educación de la Academia Sinergia, dirigido por
+								Andrea Calderon, esta compuesto por personas capacitas y expertas
+								para brindar un excelente servicio y acompañar a los alumnos en su
+								trayeto como peluqueros, sinergia es una academia de mas 10 años por
+								las cuales pasan grandes estilistas que lograron cumplir su sueños y
+								sus metas. con su programa actualizado constantemente, sinergia
+								logra cumplir con las exigencias del mercado acutal
 							</p>
 						</div>
 					</div>
@@ -82,11 +96,17 @@
 							</div>
 
 							<div class="col-lg-7 col-md-12">
-								<img
-									src="https://via.placeholder.com/740x170"
-									alt="Nombre Directora"
-									class="img-fluid nosotros__name--directora"
-								/>
+								<h2
+									class="
+										container-fluid
+										nosotros__name--directora
+										p-5
+										text-center
+									"
+								>
+									ANDREA CALDERON
+								</h2>
+
 								<p
 									class="
 										colorTertiary
@@ -186,7 +206,23 @@
 
 		<footer class="bg-dark">
 			<div class="footer__secondary py-3">
-				<p class="footer__text"></p>
+				<div class="row d-flex text-center fs-1">
+					<div class="col-lg-3">
+						<a href="/index.html" class="text-decoration-none">Home</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/cursos.html" class="text-decoration-none">Cursos</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/productos.html" class="text-decoration-none">Productos</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/nosotros.html" class="text-decoration-none">Nosotros</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/contacto.html" class="text-decoration-none">Contacto</a>
+					</div>
+				</div>
 			</div>
 
 			<div class="container text-white py-5">
