--- a/views/productos.html
+++ b/views/productos.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+		<meta name="description" content="Productos para profesionales Sinergia" />
+		<meta
+			name="keywords"
+			content=" maquinas de corte, patillera, tijeras, secadoras, wahl, babyliss"
+		/>
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="stylesheet" href="/assets/css/bootstrap.css" />
 		<link
@@ -13,7 +17,7 @@
 			integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
 			crossorigin="anonymous"
 		/>
-		<title>Sinergia Academia</title>
+		<title>Productos - Sinergia Academia</title>
 	</head>
 
 	<body class="bgProducto">
@@ -693,7 +697,23 @@
 
 		<footer class="bg-dark">
 			<div class="footer__secondary py-3">
-				<p class="footer__text"></p>
+				<div class="row d-flex text-center fs-1">
+					<div class="col-lg-3">
+						<a href="/index.html" class="text-decoration-none">Home</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/cursos.html" class="text-decoration-none">Cursos</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/productos.html" class="text-decoration-none">Productos</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/nosotros.html" class="text-decoration-none">Nosotros</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/contacto.html" class="text-decoration-none">Contacto</a>
+					</div>
+				</div>
 			</div>
 
 			<div class="container text-white py-5">
