--- a/views/cursos.html
+++ b/views/cursos.html
@@ -81,7 +81,7 @@
 		</section>
 
 		<section>
-			<div class="bg-dark container-fluid">
+			<div class="container-fluid bg-dark mb-5 pb-5">
 				<div class="row d-flex justify-content-around">
 					<div class="col-lg-3 mt-5">
 						<div class="container px-5 bg-dark text-white border border-warning">
@@ -133,7 +133,7 @@
 									<img
 										src="../assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo Coalix"
 									/>
 								</div>
 							</div>
@@ -206,7 +206,7 @@
 									<img
 										src="../assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo Coalix"
 									/>
 								</div>
 							</div>
@@ -279,7 +279,7 @@
 									<img
 										src="../assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo Coalix"
 									/>
 								</div>
 							</div>
@@ -302,9 +302,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="bg-dark container-fluid">
 				<div class="row d-flex justify-content-around">
 					<div class="col-lg-3 mt-5">
 						<div class="container px-5 bg-dark text-white border border-warning">
@@ -356,7 +354,7 @@
 									<img
 										src="../assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo Coalix"
 									/>
 								</div>
 							</div>
@@ -429,7 +427,7 @@
 									<img
 										src="../assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo Coalix"
 									/>
 								</div>
 							</div>
@@ -502,7 +500,7 @@
 									<img
 										src="../assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo Coalix"
 									/>
 								</div>
 							</div>
@@ -525,9 +523,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="mb-5 py-5 bg-dark container-fluid">
 				<div class="row d-flex justify-content-around">
 					<div class="col-lg-3 mt-5">
 						<div class="container px-5 bg-dark text-white border border-warning">
@@ -579,7 +575,7 @@
 									<img
 										src="../assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo Coalix"
 									/>
 								</div>
 							</div>
@@ -652,7 +648,7 @@
 									<img
 										src="../assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo Coalix"
 									/>
 								</div>
 							</div>
@@ -725,7 +721,7 @@
 									<img
 										src="../assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo Coalix"
 									/>
 								</div>
 							</div>
@@ -752,7 +748,7 @@
 		</section>
 
 		<footer class="bg-dark">
-			<div class="footer__secondary py-3">
+			<div class="footer__secondary py-3 container-fluid">
 				<div class="row d-flex text-center fs-1">
 					<div class="col-lg-3">
 						<a href="/index.html" class="text-decoration-none">Home</a>
