--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600;800&family=Open+Sans:ital,wght@0,400;1,300&display=swap");
+@import 'https://fonts.googleapis.com/css?family=Inconsolata';
 h1,
 h2,
 h3,
@@ -196,57 +197,121 @@ footer div div div i {
   margin-bottom: 2rem;
   background-position: center;
   background-color: linear; }
+  .imgContacto .contacto__title {
+    font-size: 6rem;
+    color: white; }
 
-.logoForm {
-  margin: 10rem 25rem; }
+html {
+  min-height: 100%; }
 
-.contacto__title {
-  font-size: 6rem;
+.bodyError {
+  box-sizing: border-box;
+  height: 100%;
+  background-color: #000000;
+  background-image: radial-gradient(#11581e, #041607), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Inconsolata', Helvetica, sans-serif;
+  font-size: 1.5rem;
+  color: rgba(128, 255, 128, 0.8);
+  text-shadow: 0 0 1ex #33ff33, 0 0 2px rgba(255, 255, 255, 0.8); }
+
+.noise {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+  opacity: 0.02; }
+
+.overlay {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(180deg, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 0) 100%);
+  background-size: auto 4px;
+  z-index: 1; }
+
+.overlay::before {
+  content: '';
+  pointer-events: none;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(0deg, transparent 0%, rgba(32, 128, 32, 0.2) 2%, rgba(32, 128, 32, 0.8) 3%, rgba(32, 128, 32, 0.2) 3%, transparent 100%);
+  background-repeat: no-repeat;
+  animation: scan 7.5s linear 0s infinite; }
+
+@keyframes scan {
+  0% {
+    background-position: 0 -100vh; }
+  35%,
+  100% {
+    background-position: 0 100vh; } }
+
+.terminal {
+  box-sizing: inherit;
+  position: absolute;
+  height: 100%;
+  width: 1000px;
+  max-width: 100%;
+  padding: 4rem;
+  text-transform: uppercase; }
+
+.output {
+  color: rgba(128, 255, 128, 0.8);
+  text-shadow: 0 0 1px rgba(51, 255, 51, 0.4), 0 0 2px rgba(255, 255, 255, 0.8); }
+
+.output::before {
+  content: '> '; }
+
+div p a {
+  color: #fff;
+  text-decoration: none; }
+
+div p a::before {
+  content: '['; }
+
+div p a::after {
+  content: ']'; }
+
+.errorcode {
   color: white; }
 
-/************ERROR 404*****************/
-.imgError {
-  background-image: url(/assets/img/404.png);
-  height: 100vh; }
-
-.moverBoton {
-  padding-top: 72rem;
-  padding-left: 46vw; }
-
-.buttonError {
-  color: white;
-  font-size: 2rem;
-  background-color: #000000;
-  padding: 2rem 4rem;
-  border-radius: 1rem; }
-
-/*****************PRODUCTO********************/
-.productos__checkbox {
-  display: flex;
-  flex-direction: column;
-  font-size: 1.6rem;
-  text-transform: capitalize; }
-
 .bgProducto {
-  background-color: #efe8df; }
-
-.productos__info {
-  font-size: 2rem; }
-
-.producto__precio {
-  font-size: 2.5rem; }
-
-@media only screen and (min-width: 768px) {
-  .productos__info {
-    font-size: 2.7rem; }
-  .producto__precio {
-    font-size: 3rem; } }
-
-@media only screen and (min-width: 1200px) {
-  .productos__info {
+  background-color: #efe8df;
+  /*****************PRODUCTO********************/ }
+  .bgProducto .productos__checkbox {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.6rem;
+    text-transform: capitalize; }
+  .bgProducto .productos__info {
     font-size: 2rem; }
-  .producto__precio {
-    font-size: 3rem; } }
+    @media only screen and (min-width: 768px) {
+      .bgProducto .productos__info .productos__info {
+        font-size: 2.7rem; } }
+
+@media only screen and (min-width: 768px) and (min-width: 1200px) {
+  .bgProducto .productos__info .productos__info {
+    font-size: 2rem; } }
+  .bgProducto .producto__precio {
+    font-size: 2.5rem; }
+    @media only screen and (min-width: 768px) {
+      .bgProducto .producto__precio .producto__precio {
+        font-size: 3rem; } }
+  @media only screen and (min-width: 768px) and (min-width: 1200px) {
+    .bgProducto .producto__precio .producto__precio .producto__precio {
+      font-size: 3rem; } }
 
 .nosotros__banner {
   background: url(/assets/img/nosotrosBanner.jpg);
