--- a/views/contacto.html
+++ b/views/contacto.html
@@ -71,7 +71,7 @@
 										type="number"
 										name="telefono"
 										id=""
-										class="p-2 fs-3 form-control opacity-50 text-white"
+										class="p-2 fs-3 form-control opacity-50"
 									/>
 
 									<label class="fs-2 pb-2" for="seleccionar"
@@ -111,7 +111,7 @@
 		</div>
 
 		<footer class="bg-dark">
-			<div class="footer__secondary py-3">
+			<div class="footer__secondary py-3 container-fluid">
 				<div class="row d-flex text-center fs-1">
 					<div class="col-lg-3">
 						<a href="/index.html" class="text-decoration-none">Home</a>
