--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -133,7 +133,7 @@
 			</div>
 		</main>
 
-		<section>
+		<section class="container-fluid">
 			<h2 class="text-center nosotros__profesores">Profesores</h2>
 			<div class="row py-5 ms-5">
 				<div class="col-lg-2 col-md-4 col-sm-6 py-5">
@@ -205,7 +205,7 @@
 		</section>
 
 		<footer class="bg-dark">
-			<div class="footer__secondary py-3">
+			<div class="footer__secondary py-3 container-fluid">
 				<div class="row d-flex text-center fs-1">
 					<div class="col-lg-3">
 						<a href="/index.html" class="text-decoration-none">Home</a>
