--- a/views/productos.html
+++ b/views/productos.html
@@ -696,7 +696,7 @@
 		</main>
 
 		<footer class="bg-dark">
-			<div class="footer__secondary py-3">
+			<div class="footer__secondary py-3 container-fluid">
 				<div class="row d-flex text-center fs-1">
 					<div class="col-lg-3">
 						<a href="/index.html" class="text-decoration-none">Home</a>
