--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Academia De Peluqueria y Barberia, Profesores" />
+		<meta
+			name="description"
+			content="Academia De Peluqueria y Barberia, Profesores"
+		/>
 		<meta
 			name="keywords"
 			content="Andre calderon, profesores, sinergia, academia, capacitación"
@@ -25,25 +28,60 @@
 	</head>
 
 	<body>
-		<nav class="bgPrimary">
-			<div class="align-items-center">
-				<a href="/index.html" class="mx-auto"
-					><img src="../assets/img/logo.png" alt="logo" class="nav__logo"
+		<nav class="nav__fixed navbar navbar-expand-lg navbar-light bgPrimary">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/index.html"
+					><img
+						src="/assets/img/logo.png"
+						class="nav__logo ms-4"
+						alt="logo"
 				/></a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="collapse navbar-collapse"
+					id="navbarSupportedContent"
+				>
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a
+								class="nav-link active fs-1 text-white ms-5"
+								aria-current="page"
+								href="/views/cursos.html"
+								>Cursos</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="nav-link fs-1 text-white ms-5"
+								href="/views/productos.html"
+								>Productos</a
+							>
+						</li>
 
-				<div class="container">
-					<ul class="justify-content-evenly text-decoration-none">
-						<li>
-							<a href="/views/cursos.html">Cursos</a>
+						<li class="nav-item">
+							<a
+								class="nav-link fs-1 text-white ms-5"
+								href="/views/nosotros.html"
+								>Nosotros</a
+							>
 						</li>
-						<li>
-							<a href="/views/productos.html">Productos </a>
-						</li>
-						<li>
-							<a href="/views/nosotros.html">Nosotros</a>
-						</li>
-						<li>
-							<a href="/views/contacto.html">Contacto</a>
+
+						<li class="nav-item">
+							<a
+								class="nav-link fs-1 text-white ms-5"
+								href="/views/contacto.html"
+								>Contactanos</a
+							>
 						</li>
 					</ul>
 				</div>
@@ -68,13 +106,16 @@
 						<div class="cursos__font">
 							<h1 class="cursos__font--title py-5">Sinergia</h1>
 							<p class="cursos__font--parrafo p-4">
-								Nuestro equipo de Educación de la Academia Sinergia, dirigido por
-								Andrea Calderon, esta compuesto por personas capacitas y expertas
-								para brindar un excelente servicio y acompañar a los alumnos en su
-								trayeto como peluqueros, sinergia es una academia de mas 10 años por
-								las cuales pasan grandes estilistas que lograron cumplir su sueños y
-								sus metas. con su programa actualizado constantemente, sinergia
-								logra cumplir con las exigencias del mercado acutal
+								Nuestro equipo de Educación de la Academia
+								Sinergia, dirigido por Andrea Calderon, esta
+								compuesto por personas capacitas y expertas para
+								brindar un excelente servicio y acompañar a los
+								alumnos en su trayeto como peluqueros, sinergia
+								es una academia de mas 10 años por las cuales
+								pasan grandes estilistas que lograron cumplir su
+								sueños y sus metas. con su programa actualizado
+								constantemente, sinergia logra cumplir con las
+								exigencias del mercado acutal
 							</p>
 						</div>
 					</div>
@@ -87,7 +128,13 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-10">
 						<div class="row">
-							<div class="col-lg-4 col-md-12 d-flex justify-content-center">
+							<div
+								class="
+									col-lg-4 col-md-12
+									d-flex
+									justify-content-center
+								"
+							>
 								<img
 									src="/assets/img/directora.jpg "
 									alt="directora"
@@ -117,14 +164,17 @@
 										nosotros__info
 									"
 								>
-									Andrea es la directora y fundadora de Sinergia, a sus 43 años
-									conlleva una de las mejores academia del pais donde asisten mas
-									de 1000 alumnos por año, a participado en Grandes Eventos,
-									trabajado con los mejores profesionales y recorrido gran parte
-									del pais. Lleva mas de 20 años en el rubro de la Peluqueria, Su
-									aficion es la colorimetria y enseñar, Ademas de ser la directora
-									es la profesora de los superiores que son encargados de ya
-									capacitar a profesionales.
+									Andrea es la directora y fundadora de
+									Sinergia, a sus 43 años conlleva una de las
+									mejores academia del pais donde asisten mas
+									de 1000 alumnos por año, a participado en
+									Grandes Eventos, trabajado con los mejores
+									profesionales y recorrido gran parte del
+									pais. Lleva mas de 20 años en el rubro de la
+									Peluqueria, Su aficion es la colorimetria y
+									enseñar, Ademas de ser la directora es la
+									profesora de los superiores que son
+									encargados de ya capacitar a profesionales.
 								</p>
 							</div>
 						</div>
@@ -189,16 +239,19 @@
 			<div class="row d-flex justify-content-center pt-3 pb-5">
 				<div class="col-lg-4 p-3">
 					<p class="fs-3">
-						La mayoría de ellos se formaron desde sus inicios en Sinergia donde, a
-						través de los años de experiencia en la atención al publico y la
-						capacitación constante, adquirieron las herramientas fundamentales para
-						estar al frente de los cursos, formar profesionales y transmitirles nuestra
-						técnica de trabajo.
+						La mayoría de ellos se formaron desde sus inicios en
+						Sinergia donde, a través de los años de experiencia en
+						la atención al publico y la capacitación constante,
+						adquirieron las herramientas fundamentales para estar al
+						frente de los cursos, formar profesionales y
+						transmitirles nuestra técnica de trabajo.
 					</p>
 					<p class="fs-3">
-						En el caso de Elizabeth di Gaeta, Directora de Formación, cuenta con una
-						amplia trayectoria profesional y académica. También proveniente de familia
-						de peluqueros, terminó de formarse en varias academias alrededor del mundo.
+						En el caso de Elizabeth di Gaeta, Directora de
+						Formación, cuenta con una amplia trayectoria profesional
+						y académica. También proveniente de familia de
+						peluqueros, terminó de formarse en varias academias
+						alrededor del mundo.
 					</p>
 				</div>
 			</div>
@@ -208,19 +261,37 @@
 			<div class="footer__secondary py-3 container-fluid">
 				<div class="row d-flex text-center fs-1">
 					<div class="col-lg-3">
-						<a href="/index.html" class="text-decoration-none">Home</a>
+						<a href="/index.html" class="text-decoration-none"
+							>Home</a
+						>
 					</div>
 					<div class="col-lg-2">
-						<a href="/views/cursos.html" class="text-decoration-none">Cursos</a>
+						<a
+							href="/views/cursos.html"
+							class="text-decoration-none"
+							>Cursos</a
+						>
 					</div>
 					<div class="col-lg-2">
-						<a href="/views/productos.html" class="text-decoration-none">Productos</a>
+						<a
+							href="/views/productos.html"
+							class="text-decoration-none"
+							>Productos</a
+						>
 					</div>
 					<div class="col-lg-2">
-						<a href="/views/nosotros.html" class="text-decoration-none">Nosotros</a>
+						<a
+							href="/views/nosotros.html"
+							class="text-decoration-none"
+							>Nosotros</a
+						>
 					</div>
 					<div class="col-lg-2">
-						<a href="/views/contacto.html" class="text-decoration-none">Contacto</a>
+						<a
+							href="/views/contacto.html"
+							class="text-decoration-none"
+							>Contacto</a
+						>
 					</div>
 				</div>
 			</div>
@@ -231,7 +302,15 @@
 						<h3 class="fs-1 pt-5">CONTACTATE</h3>
 						<div class="py-4">
 							<div class="d-flex">
-								<i class="py-2 fs-1 fab fa-whatsapp text-success"></i>
+								<i
+									class="
+										py-2
+										fs-1
+										fab
+										fa-whatsapp
+										text-success
+									"
+								></i>
 								<p class="ms-3 py-2 fs-2">+54 911 349 582</p>
 							</div>
 							<div class="d-flex">
@@ -241,53 +320,105 @@
 
 							<div class="d-flex">
 								<i class="far fa-envelope py-2 fs-1"> </i>
-								<p class="ms-3 py-2 fs-2">sinergiasr@gmail.com</p>
+								<p class="ms-3 py-2 fs-2">
+									sinergiasr@gmail.com
+								</p>
 							</div>
 							<div class="d-flex">
 								<i class="fas fa-map-marker-alt fs-1 py-2"> </i>
-								<p class="ms-3 py-2 fs-4">Coronel Campos 46, San Rafael, Mendoza</p>
+								<p class="ms-3 py-2 fs-4">
+									Coronel Campos 46, San Rafael, Mendoza
+								</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3">
 						<h3 class="pt-5 pb-3 fs-1">Inscripciones Abiertas</h3>
 						<a href="/views/cursos.html"
-							><button class="btn btn-warning w-50 p-3 fs-2">Inscribite</button></a
+							><button class="btn btn-warning w-50 p-3 fs-2">
+								Inscribite
+							</button></a
 						>
 
 						<h3 class="fs-1 pt-5 pb-4">SOCIAL</h3>
 						<a href="https://www.facebook.com/"
-							><i class="fab fa-facebook-f bg-white rounded-circle text-dark p-3"></i
+							><i
+								class="
+									fab
+									fa-facebook-f
+									bg-white
+									rounded-circle
+									text-dark
+									p-3
+								"
+							></i
 						></a>
 						<a href="https://www.twitter.com/"
 							><i
-								class="fab fa-twitter bg-white rounded-circle text-dark p-3 ms-4"
+								class="
+									fab
+									fa-twitter
+									bg-white
+									rounded-circle
+									text-dark
+									p-3
+									ms-4
+								"
 							></i
 						></a>
 						<a href="https://www.instagram.com/"
 							><i
-								class="fab fa-instagram bg-white rounded-circle text-dark p-3 ms-4"
+								class="
+									fab
+									fa-instagram
+									bg-white
+									rounded-circle
+									text-dark
+									p-3
+									ms-4
+								"
 							></i
 						></a>
 					</div>
 					<div class="col-lg-3">
 						<h3 class="pt-5 fs-1 pb-2">ALUMNOS</h3>
-						<a href="/views/contacto.html" class="text-decoration-none"
-							><p class="fs-3 text-white opacity-50">Atencion al Alumno</p></a
+						<a
+							href="/views/contacto.html"
+							class="text-decoration-none"
+							><p class="fs-3 text-white opacity-50">
+								Atencion al Alumno
+							</p></a
 						>
 
 						<h3 class="pt-5 fs-1 pb-2">Profesionales</h3>
-						<a href="/views/contacto.html" class="text-decoration-none"
-							><p class="fs-3 text-white opacity-50">Trabaja con Nosotros</p></a
+						<a
+							href="/views/contacto.html"
+							class="text-decoration-none"
+							><p class="fs-3 text-white opacity-50">
+								Trabaja con Nosotros
+							</p></a
 						>
 					</div>
 					<div class="col-lg-3">
-						<h3 class="pt-5 fs-1 pb-4">TE MANTENDREMOS INFORMADO</h3>
-						<input type="text" placeholder="ingresa tu email" class="p-4 w-100 fs-3" />
-						<button class="my-4 w-50 p-4 bg-white fs-3">Suscribite</button>
+						<h3 class="pt-5 fs-1 pb-4">
+							TE MANTENDREMOS INFORMADO
+						</h3>
+						<input
+							type="text"
+							placeholder="ingresa tu email"
+							class="p-4 w-100 fs-3"
+						/>
+						<button class="my-4 w-50 p-4 bg-white fs-3">
+							Suscribite
+						</button>
 					</div>
 				</div>
 			</div>
 		</footer>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
