--- a/views/contacto.html
+++ b/views/contacto.html
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Academia De Peluqueria y Barberia, Contactanos" />
+		<meta
+			name="description"
+			content="Academia De Peluqueria y Barberia, Contactanos"
+		/>
 		<meta name="keywords" content="academia Sinergia, contactanos" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="stylesheet" href="/assets/css/bootstrap.css" />
@@ -18,25 +21,60 @@
 	</head>
 
 	<body>
-		<nav class="bgPrimary">
-			<div class="align-items-center">
-				<a href="/index.html" class="mx-auto"
-					><img src="../assets/img/logo.png" alt="logo" class="nav__logo"
+		<nav class="nav__fixed navbar navbar-expand-lg navbar-light bgPrimary">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/index.html"
+					><img
+						src="/assets/img/logo.png"
+						class="nav__logo ms-4"
+						alt="logo"
 				/></a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="collapse navbar-collapse"
+					id="navbarSupportedContent"
+				>
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a
+								class="nav-link active fs-1 text-white ms-5"
+								aria-current="page"
+								href="/views/cursos.html"
+								>Cursos</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="nav-link fs-1 text-white ms-5"
+								href="/views/productos.html"
+								>Productos</a
+							>
+						</li>
 
-				<div class="container">
-					<ul class="justify-content-evenly text-decoration-none">
-						<li>
-							<a href="/views/cursos.html">Cursos</a>
+						<li class="nav-item">
+							<a
+								class="nav-link fs-1 text-white ms-5"
+								href="/views/nosotros.html"
+								>Nosotros</a
+							>
 						</li>
-						<li>
-							<a href="/views/productos.html">Productos </a>
-						</li>
-						<li>
-							<a href="/views/nosotros.html">Nosotros</a>
-						</li>
-						<li>
-							<a href="/views/contacto.html">Contacto</a>
+
+						<li class="nav-item">
+							<a
+								class="nav-link fs-1 text-white ms-5"
+								href="/views/contacto.html"
+								>Contactanos</a
+							>
 						</li>
 					</ul>
 				</div>
@@ -47,16 +85,32 @@
 			<div>
 				<h1 class="text-center p-4 contacto__title">Contactanos</h1>
 				<div class="row">
-					<div class="col-lg-6 d-flex justify-content-center align-items-center my-5">
-						<img class="w-50" src="../assets/img/logo.png" alt="logo" />
+					<div
+						class="
+							col-lg-6
+							d-flex
+							justify-content-center
+							align-items-center
+							my-5
+						"
+					>
+						<img
+							class="w-50"
+							src="../assets/img/logo.png"
+							alt="logo"
+						/>
 					</div>
 					<div class="col-lg-5 my-5">
 						<div>
 							<form class="text-warning">
 								<fieldset>
-									<legend class="text-center fs-1">Completa los datos</legend>
+									<legend class="text-center fs-1">
+										Completa los datos
+									</legend>
 
-									<label class="fs-2 pb-2" for="nombre">Nombre Completo</label>
+									<label class="fs-2 pb-2" for="nombre"
+										>Nombre Completo</label
+									>
 									<input
 										type="text"
 										name="nombre"
@@ -77,9 +131,14 @@
 									<label class="fs-2 pb-2" for="seleccionar"
 										>Sobre que quiere saber</label
 									>
-									<select class="p-2 fs-3 form-control opacity-50" name="select">
+									<select
+										class="p-2 fs-3 form-control opacity-50"
+										name="select"
+									>
 										<option value="value1">Cursos</option>
-										<option value="value2" selected>Productos</option>
+										<option value="value2" selected>
+											Productos
+										</option>
 										<option value="value3">Otros</option>
 									</select>
 
@@ -88,7 +147,14 @@
 									>
 
 									<textarea
-										class="fs-2 p-1 form-control bg-light opacity-50 fw-bold"
+										class="
+											fs-2
+											p-1
+											form-control
+											bg-light
+											opacity-50
+											fw-bold
+										"
 										name="textarea"
 										id=""
 										cols="30"
@@ -98,9 +164,19 @@
 									<div class="d-flex">
 										<input
 											type="submit"
-											class="w-50 p-3 mt-5 bg-warning fs-2 me-3"
+											class="
+												w-50
+												p-3
+												mt-5
+												bg-warning
+												fs-2
+												me-3
+											"
 										/>
-										<input type="reset" class="w-50 p-3 mt-5 bg-white fs-2" />
+										<input
+											type="reset"
+											class="w-50 p-3 mt-5 bg-white fs-2"
+										/>
 									</div>
 								</fieldset>
 							</form>
@@ -114,19 +190,37 @@
 			<div class="footer__secondary py-3 container-fluid">
 				<div class="row d-flex text-center fs-1">
 					<div class="col-lg-3">
-						<a href="/index.html" class="text-decoration-none">Home</a>
+						<a href="/index.html" class="text-decoration-none"
+							>Home</a
+						>
 					</div>
 					<div class="col-lg-2">
-						<a href="/views/cursos.html" class="text-decoration-none">Cursos</a>
+						<a
+							href="/views/cursos.html"
+							class="text-decoration-none"
+							>Cursos</a
+						>
 					</div>
 					<div class="col-lg-2">
-						<a href="/views/productos.html" class="text-decoration-none">Productos</a>
+						<a
+							href="/views/productos.html"
+							class="text-decoration-none"
+							>Productos</a
+						>
 					</div>
 					<div class="col-lg-2">
-						<a href="/views/nosotros.html" class="text-decoration-none">Nosotros</a>
+						<a
+							href="/views/nosotros.html"
+							class="text-decoration-none"
+							>Nosotros</a
+						>
 					</div>
 					<div class="col-lg-2">
-						<a href="/views/contacto.html" class="text-decoration-none">Contacto</a>
+						<a
+							href="/views/contacto.html"
+							class="text-decoration-none"
+							>Contacto</a
+						>
 					</div>
 				</div>
 			</div>
@@ -137,7 +231,15 @@
 						<h3 class="fs-1 pt-5">CONTACTATE</h3>
 						<div class="py-4">
 							<div class="d-flex">
-								<i class="py-2 fs-1 fab fa-whatsapp text-success"></i>
+								<i
+									class="
+										py-2
+										fs-1
+										fab
+										fa-whatsapp
+										text-success
+									"
+								></i>
 								<p class="ms-3 py-2 fs-2">+54 911 349 582</p>
 							</div>
 							<div class="d-flex">
@@ -147,53 +249,105 @@
 
 							<div class="d-flex">
 								<i class="far fa-envelope py-2 fs-1"> </i>
-								<p class="ms-3 py-2 fs-2">sinergiasr@gmail.com</p>
+								<p class="ms-3 py-2 fs-2">
+									sinergiasr@gmail.com
+								</p>
 							</div>
 							<div class="d-flex">
 								<i class="fas fa-map-marker-alt fs-1 py-2"> </i>
-								<p class="ms-3 py-2 fs-4">Coronel Campos 46, San Rafael, Mendoza</p>
+								<p class="ms-3 py-2 fs-4">
+									Coronel Campos 46, San Rafael, Mendoza
+								</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3">
 						<h3 class="pt-5 pb-3 fs-1">Inscripciones Abiertas</h3>
 						<a href="/views/cursos.html"
-							><button class="btn btn-warning w-50 p-3 fs-2">Inscribite</button></a
+							><button class="btn btn-warning w-50 p-3 fs-2">
+								Inscribite
+							</button></a
 						>
 
 						<h3 class="fs-1 pt-5 pb-4">SOCIAL</h3>
 						<a href="https://www.facebook.com/"
-							><i class="fab fa-facebook-f bg-white rounded-circle text-dark p-3"></i
+							><i
+								class="
+									fab
+									fa-facebook-f
+									bg-white
+									rounded-circle
+									text-dark
+									p-3
+								"
+							></i
 						></a>
 						<a href="https://www.twitter.com/"
 							><i
-								class="fab fa-twitter bg-white rounded-circle text-dark p-3 ms-4"
+								class="
+									fab
+									fa-twitter
+									bg-white
+									rounded-circle
+									text-dark
+									p-3
+									ms-4
+								"
 							></i
 						></a>
 						<a href="https://www.instagram.com/"
 							><i
-								class="fab fa-instagram bg-white rounded-circle text-dark p-3 ms-4"
+								class="
+									fab
+									fa-instagram
+									bg-white
+									rounded-circle
+									text-dark
+									p-3
+									ms-4
+								"
 							></i
 						></a>
 					</div>
 					<div class="col-lg-3">
 						<h3 class="pt-5 fs-1 pb-2">ALUMNOS</h3>
-						<a href="/views/contacto.html" class="text-decoration-none"
-							><p class="fs-3 text-white opacity-50">Atencion al Alumno</p></a
+						<a
+							href="/views/contacto.html"
+							class="text-decoration-none"
+							><p class="fs-3 text-white opacity-50">
+								Atencion al Alumno
+							</p></a
 						>
 
 						<h3 class="pt-5 fs-1 pb-2">Profesionales</h3>
-						<a href="/views/contacto.html" class="text-decoration-none"
-							><p class="fs-3 text-white opacity-50">Trabaja con Nosotros</p></a
+						<a
+							href="/views/contacto.html"
+							class="text-decoration-none"
+							><p class="fs-3 text-white opacity-50">
+								Trabaja con Nosotros
+							</p></a
 						>
 					</div>
 					<div class="col-lg-3">
-						<h3 class="pt-5 fs-1 pb-4">TE MANTENDREMOS INFORMADO</h3>
-						<input type="text" placeholder="ingresa tu email" class="p-4 w-100 fs-3" />
-						<button class="my-4 w-50 p-4 bg-white fs-3">Suscribite</button>
+						<h3 class="pt-5 fs-1 pb-4">
+							TE MANTENDREMOS INFORMADO
+						</h3>
+						<input
+							type="text"
+							placeholder="ingresa tu email"
+							class="p-4 w-100 fs-3"
+						/>
+						<button class="my-4 w-50 p-4 bg-white fs-3">
+							Suscribite
+						</button>
 					</div>
 				</div>
 			</div>
 		</footer>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
