--- a/views/cursos.html
+++ b/views/cursos.html
@@ -22,30 +22,66 @@
 	</head>
 
 	<body>
-		<nav class="bgPrimary">
-			<div class="align-items-center">
-				<a href="/index.html" class="mx-auto"
-					><img src="../assets/img/logo.png" alt="logo" class="nav__logo"
+		<nav class="nav__fixed navbar navbar-expand-lg navbar-light bgPrimary">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/index.html"
+					><img
+						src="/assets/img/logo.png"
+						class="nav__logo ms-4"
+						alt="logo"
 				/></a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="collapse navbar-collapse"
+					id="navbarSupportedContent"
+				>
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a
+								class="nav-link active fs-1 text-white ms-5"
+								aria-current="page"
+								href="/views/cursos.html"
+								>Cursos</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="nav-link fs-1 text-white ms-5"
+								href="/views/productos.html"
+								>Productos</a
+							>
+						</li>
 
-				<div class="container">
-					<ul class="justify-content-evenly text-decoration-none">
-						<li>
-							<a href="/views/cursos.html">Cursos</a>
+						<li class="nav-item">
+							<a
+								class="nav-link fs-1 text-white ms-5"
+								href="/views/nosotros.html"
+								>Nosotros</a
+							>
 						</li>
-						<li>
-							<a href="/views/productos.html">Productos </a>
-						</li>
-						<li>
-							<a href="/views/nosotros.html">Nosotros</a>
-						</li>
-						<li>
-							<a href="/views/contacto.html">Contacto</a>
+
+						<li class="nav-item">
+							<a
+								class="nav-link fs-1 text-white ms-5"
+								href="/views/contacto.html"
+								>Contactanos</a
+							>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+
 
 		<section>
 			<div class="cursos__banner"></div>
@@ -822,5 +858,10 @@
 				</div>
 			</div>
 		</footer>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
