Arreglo en la Nav

--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -28,7 +28,7 @@
 	</head>
 
 	<body>
-		<nav class="nav__fixed navbar navbar-expand-lg navbar-light bgPrimary">
+		<nav class="nav__fixed navbar navbar-expand-lg navbar-dark bgPrimary">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="/index.html"
 					><img
