--- a/views/contacto.html
+++ b/views/contacto.html
@@ -187,43 +187,7 @@
 		</div>
 
 		<footer class="bg-dark">
-			<div class="footer__secondary py-3 container-fluid">
-				<div class="row d-flex text-center fs-1">
-					<div class="col-lg-3">
-						<a href="/index.html" class="text-decoration-none"
-							>Home</a
-						>
-					</div>
-					<div class="col-lg-2">
-						<a
-							href="/views/cursos.html"
-							class="text-decoration-none"
-							>Cursos</a
-						>
-					</div>
-					<div class="col-lg-2">
-						<a
-							href="/views/productos.html"
-							class="text-decoration-none"
-							>Productos</a
-						>
-					</div>
-					<div class="col-lg-2">
-						<a
-							href="/views/nosotros.html"
-							class="text-decoration-none"
-							>Nosotros</a
-						>
-					</div>
-					<div class="col-lg-2">
-						<a
-							href="/views/contacto.html"
-							class="text-decoration-none"
-							>Contacto</a
-						>
-					</div>
-				</div>
-			</div>
+			<div class="footer__secondary py-3 container-fluid py-5"></div>
 
 			<div class="container text-white py-5">
 				<div class="row">
