--- a/views/productos.html
+++ b/views/productos.html
@@ -29,7 +29,7 @@
 				<a class="navbar-brand" href="/index.html"
 					><img
 						src="/assets/img/logo.png"
-						class="nav__logo ms-4"
+						class="nav__logo"
 						alt="logo"
 				/></a>
 				<button
@@ -85,8 +85,8 @@
 		</nav>
 
 		<main>
-			<h1 class="text-center pt-5 producto__titulo">Tienda</h1>
 			<div class="container-fluid">
+				<h1 class="text-center producto__titulo">Tienda</h1>
 				<div class="row">
 					<div class="col-lg-3 py-5">
 						<div
@@ -1233,43 +1233,7 @@
 		</main>
 
 		<footer class="bg-dark">
-			<div class="footer__secondary py-3 container-fluid">
-				<div class="row d-flex text-center fs-1">
-					<div class="col-lg-3">
-						<a href="/index.html" class="text-decoration-none"
-							>Home</a
-						>
-					</div>
-					<div class="col-lg-2">
-						<a
-							href="/views/cursos.html"
-							class="text-decoration-none"
-							>Cursos</a
-						>
-					</div>
-					<div class="col-lg-2">
-						<a
-							href="/views/productos.html"
-							class="text-decoration-none"
-							>Productos</a
-						>
-					</div>
-					<div class="col-lg-2">
-						<a
-							href="/views/nosotros.html"
-							class="text-decoration-none"
-							>Nosotros</a
-						>
-					</div>
-					<div class="col-lg-2">
-						<a
-							href="/views/contacto.html"
-							class="text-decoration-none"
-							>Contacto</a
-						>
-					</div>
-				</div>
-			</div>
+			<div class="footer__secondary py-3 container-fluid py-5"></div>
 
 			<div class="container text-white py-5">
 				<div class="row">
